welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:13: error: Boolean does not take parameters
		vuBiscuit();
                         ^